feat: fix https issues

--- a/source/_posts/2019-10/浏览器层合成与页面渲染优化.md
+++ b/source/_posts/2019-10/浏览器层合成与页面渲染优化.md
@@ -170,7 +170,7 @@ GraphicsLayer 其实是一个负责生成最终准备呈现的内容图形的层
 
 从上边的研究中我们可以发现，一些产生合成层的原因太过于隐蔽了，尤其是隐式合成。在平时的开发过程中，我们很少会去关注层合成的问题，很容易就产生一些不在预期范围内的合成层，当这些不符合预期的合成层达到一定量级时，就会变成层爆炸。
 
-层爆炸会占用 GPU 和大量的内存资源，严重损耗页面性能，因此盲目地使用 GPU 加速，结果有可能会是适得其反。[CSS3硬件加速也有坑](https://div.io/topic/1348) 这篇文章提供了一个很有趣的 [DEMO](http://fouber.github.io/test/layer/)，这个 DEMO 页面中包含了一个 h1 标题，它对 transform 应用了 animation 动画，进而导致被放到了合成层中渲染。由于 animation transform 的特殊性（动态交叠不确定），隐式合成在不需要交叠的情况下也能发生，就导致了页面中所有 `z-index` 高于它的节点所对应的渲染层全部提升为合成层，最终让这个页面整整产生了几千个合成层。
+层爆炸会占用 GPU 和大量的内存资源，严重损耗页面性能，因此盲目地使用 GPU 加速，结果有可能会是适得其反。[CSS3硬件加速也有坑](https://div.io/topic/1348) 这篇文章提供了一个很有趣的 [DEMO](https://fouber.github.io/test/layer/)，这个 DEMO 页面中包含了一个 h1 标题，它对 transform 应用了 animation 动画，进而导致被放到了合成层中渲染。由于 animation transform 的特殊性（动态交叠不确定），隐式合成在不需要交叠的情况下也能发生，就导致了页面中所有 `z-index` 高于它的节点所对应的渲染层全部提升为合成层，最终让这个页面整整产生了几千个合成层。
 
 消除隐式合成就是要消除元素交叠，拿这个 DEMO 来说，我们只需要给 h1 标题的 `z-index` 属性设置一个较高的数值，就能让它高于页面中其他元素，自然也就没有合成层提升的必要了。点击 DEMO 中的复选按钮就可以给 h1 标题加上一个较大的 `z-index`，前后效果对比十分明显。
 
